<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.campusradio.android.Upload$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/sv_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_upload_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_university" />

            <EditText
                android:id="@+id/et_upload_university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_upload_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_mood" />

            <EditText
                android:id="@+id/et_upload_mood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_upload_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_genre" />

            <EditText
                android:id="@+id/et_upload_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_upload_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_username" />

            <EditText
                android:id="@+id/et_upload_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>