<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.campusradio.android.Home$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_themed"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/tv_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_song_name_sample"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_artist_name_sample" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.5"
        android:background="@color/pomegranate"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_artist"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:contentDescription="@string/home_album_art"
            android:src="@drawable/logo"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_themed"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <RatingBar
            android:id="@+id/rb_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_song_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:text="@string/home_default_song_progress"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_song_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:text="@string/home_default_song_duration" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:progress="25" />

        <ToggleButton
            android:id="@+id/tb_toggle"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="8dp"
            android:background="@drawable/toggle"
            android:textOff=""
            android:textOn=""
            android:typeface="normal" />

    </LinearLayout>

</LinearLayout>